<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>life.genny</groupId>
  <artifactId>qwandaq</artifactId>
  <version>10.0.0</version>

  <name>Qwanda Native</name>
  <description>A Natively Compiled package for Genny classes and utilities</description>
  <url>https://github.com/genny-project/qwandaq</url>

  <licenses>
	  <license>
		  <name>Apache License, Version 2.0</name>
		  <distribution>repo</distribution>
		  <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
	  </license>
  </licenses>

 <developers>
    <developer>
      <name>Jasper Robison</name>
      <email>jasper.robison@gada.io</email>
      <organization>GADA Technology</organization>
      <organizationUrl>https://gada.io</organizationUrl>
    </developer>
    <developer>
      <name>Adam Crow</name>
      <email>adam.crow@gada.io</email>
      <organization>GADA Technology</organization>
      <organizationUrl>https://gada.io</organizationUrl>
    </developer>
    <developer>
      <name>Bryn Meachem</name>
      <email>bryn.meahem@gada.io</email>
      <organization>GADA Technology</organization>
      <organizationUrl>https://gada.io</organizationUrl>
    </developer>
  </developers>

  <scm>
	  <connection>scm:git:git://github.com/genny-project/{project.artifactId}.git</connection>
	  <developerConnection>scm:git:ssh://github.com:genny-project/{project.artifactId}.git</developerConnection>
	  <url>http://github.com/genny-project/{project.artifactId}/tree/{project.version}</url>
  </scm>

  <properties>
    <compiler-plugin.version>3.8.1</compiler-plugin.version>
    <maven.compiler.parameters>true</maven.compiler.parameters>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
    <quarkus.platform.version>2.7.5.Final</quarkus.platform.version>
    <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
    <querydsl.version>4.4.0</querydsl.version>
    <commons-text.version>1.8</commons-text.version>
    <jackson-datatype-money.version>1.0.0</jackson-datatype-money.version>
    <version.moneta>1.1</version.moneta>
    <jwt.version>0.10.7</jwt.version>
    <testcontainers.version>1.16.0</testcontainers.version>
  </properties>

  <distributionManagement>
	  <repository>
		  <id>life.genny</id>
		  <url>https://nexus.outcome-hub.com/repository/life.genny/</url>
	  </repository>
	  <snapshotRepository>
		  <id>nexus-snapshots</id>
		  <url>https://nexus.outcome-hub.com/repository/snapshots/</url>
	  </snapshotRepository>
  </distributionManagement>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>${quarkus.platform.artifact-id}</artifactId>
        <version>${quarkus.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-hibernate-orm</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-hibernate-envers</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-hibernate-validator</artifactId>
    </dependency>
	<dependency>
		<groupId>io.quarkus</groupId>
		<artifactId>quarkus-hibernate-orm-rest-data-panache</artifactId>
	</dependency>
	<dependency>
		<groupId>io.quarkus</groupId>
		<artifactId>quarkus-jdbc-mysql</artifactId>
	</dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-resteasy-jsonb</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-resteasy</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-rest-client</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-resteasy-jackson</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-jsonb</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-arc</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-smallrye-openapi</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-smallrye-jwt-build</artifactId>
    </dependency>
	<dependency>
		<groupId>io.quarkus</groupId>
		<artifactId>quarkus-infinispan-client</artifactId>
	</dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-container-image-docker</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit5</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka-streams-test-utils</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>kafka</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>${testcontainers.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-oidc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.shared</groupId>
      <artifactId>maven-shared-utils</artifactId>
    </dependency>
	<dependency>
		<groupId>com.querydsl</groupId>
		<artifactId>querydsl-apt</artifactId>
		<version>${querydsl.version}</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>com.querydsl</groupId>
		<artifactId>querydsl-jpa</artifactId>
		<version>${querydsl.version}</version>
	</dependency>
	<dependency>
		<groupId>org.apache.commons</groupId>
		<artifactId>commons-text</artifactId>
		<version>${commons-text.version}</version>
	</dependency>
	<dependency>
		<groupId>org.zalando</groupId>
		<artifactId>jackson-datatype-money</artifactId>
		<version>${jackson-datatype-money.version}</version>
	</dependency>
	<dependency>
		<groupId>org.javamoney</groupId>
		<artifactId>moneta</artifactId>
		<version>${version.moneta}</version>
	</dependency>
	<dependency>
		<groupId>io.jsonwebtoken</groupId>
		<artifactId>jjwt-api</artifactId>
		<version>${jwt.version}</version>
	</dependency>
	<dependency>
		<groupId>io.jsonwebtoken</groupId>
		<artifactId>jjwt-impl</artifactId>
		<version>${jwt.version}</version>
		<scope>runtime</scope>
	</dependency>
	<dependency>
		<groupId>io.jsonwebtoken</groupId>
		<artifactId>jjwt-jackson</artifactId>
		<version>${jwt.version}</version>
		<scope>runtime</scope>
	</dependency>
	<dependency>
		<groupId>io.quarkus</groupId>
		<artifactId>quarkus-keycloak-authorization</artifactId>
	</dependency>
  </dependencies>

  <build>
	  <plugins>

	    <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
		<executions>
			<execution>
				<id>attach-sources</id>
				<goals>
					<goal>jar</goal>
				</goals>
			</execution>
		</executions>
	   </plugin>

      <plugin>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>quarkus-maven-plugin</artifactId>
        <version>${quarkus.platform.version}</version>
        <extensions>true</extensions>
        <executions>
          <execution>
            <goals>
              <goal>build</goal>
              <goal>generate-code</goal>
              <goal>generate-code-tests</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${compiler-plugin.version}</version>
        <configuration>
          <parameters>${maven.compiler.parameters}</parameters>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire-plugin.version}</version>
        <configuration>
          <systemPropertyVariables>
            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            <maven.home>${maven.home}</maven.home>
          </systemPropertyVariables>
        </configuration>
      </plugin>

	  <plugin>
		  <groupId>com.mysema.maven</groupId>
		  <artifactId>apt-maven-plugin</artifactId>
		  <version>1.1.3</version>
		  <executions>
			  <execution>
				  <goals>
					  <goal>process</goal>
				  </goals>
				  <configuration>
					  <outputDirectory>target/generated-sources/java</outputDirectory>
					  <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
				  </configuration>
			  </execution>
		  </executions>
	  </plugin>

	  <plugin>
		  <groupId>org.jboss.jandex</groupId>
		  <artifactId>jandex-maven-plugin</artifactId>
		  <version>1.2.1</version>
		  <executions>
			  <execution>
				  <id>make-index</id>
				  <goals>
					  <goal>jandex</goal>
				  </goals>
			  </execution>
		  </executions>
	  </plugin>

	  <plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-javadoc-plugin</artifactId>
		  <version>3.3.2</version>
		  <executions>
			  <execution>
				  <id>attach-javadocs</id>
				  <goals>
					  <goal>jar</goal>
				  </goals>
			  </execution>
		  </executions>
	  </plugin>

	</plugins>

  </build>

  <profiles>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>${surefire-plugin.version}</version>
            <executions>
              <execution>
                <goals>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
                <configuration>
                  <systemPropertyVariables>
                    <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                    <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                    <maven.home>${maven.home}</maven.home>
                  </systemPropertyVariables>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
      <properties>
        <quarkus.package.type>native</quarkus.package.type>
      </properties>
    </profile>
  </profiles>
</project>
